more fixes to notifications on smaller screens

--- a/core/template/base.css
+++ b/core/template/base.css
@@ -429,6 +429,7 @@ div.sidebarLeft {
   overflow-y: auto;
   white-space: pre-wrap;
   width: 100%;
+  word-break: break-word;
 }
 
 #inlineNotifications{
